# nimiapp-inscape

./: .gitattributes  AGENTS.md  README.md  index.html  nimi.app.yaml  package.json  pnpm-lock.yaml
.nimi/config/: bootstrap.yaml  spec-generation-inputs.yaml
.nimi/contracts/: high-risk-admission.schema.yaml  migration-inventory.schema.yaml  placement-contract.schema.yaml  shared-enums.yaml  spec-generation-inputs.schema.yaml  surface-taxonomy.schema.yaml  workflow-consumer.schema.yaml
.nimi/spec/: INDEX.md
.nimi/spec/project/: index.md
scripts/: check-redlines.mjs  gen-icon-source.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  persistence.rs
src/contracts/: app-identity.ts  inscape-space-validator.ts
src/domain/: inscape-space.ts  relationship.ts  subject.ts  type-profile.ts  typology.ts
src/product/faces/: relationship-face.tsx  self-face.tsx  today-face.tsx
src/product/first-run/: first-run-gate.tsx
src/product/ids/: index.ts
src/product/inference/: ai-proposal-parser.ts  index.ts  posterior-update.ts  seed-profile.ts
src/product/insight/: dyad-knowledge.ts  function-knowledge.ts  prompt-directives.ts
src/product/navigation/: tab-descriptor.ts
test/: dyad-analysis.test.mjs  dyad-knowledge.test.mjs  infer-type.test.mjs  inference.test.mjs  inscape-space.test.mjs  inscape-store.test.mjs  persistence.test.mjs  reflection-prompts.test.mjs  relationship.test.mjs  rewrite-classifier.test.mjs  self-analysis.test.mjs  today-prompts.test.mjs  typology.test.mjs
(+46 files in other folders)
