[package]
name = "nimiplatform-inscape-shell"
version = "0.1.0"
description = "Inscape (心相) — Jungian-typology self-reflection app (Tauri shell)"
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
base64 = "0.22"
futures-util = "0.3"
url = "2"
aes-gcm = "0.10"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
webbrowser = "1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
nimi-shell-tauri = { path = "../../../nimi-realm/nimi/kit/shell/tauri" }
